style.css
*::before,
*::after{
    box-sizing: border-box;
    margin: 0;
    padding: 0;
}

body{
    margin: 0;
    font-family: 'Epilogue', sans-serif;
    background-color: hsl(0, 0%, 98%);
}
header.main_header_container{
    /*border: 1px solid red; */
    padding: 26px 20px;
    overflow: hidden;
}
.brand_logo{
    float: left;
}
.menu_icon{
    float:right
}


/********* HERO IMAGE ***********/
.hero_img_container{
    border: 1px solid orange;
    width: auto;
}
.hero_img{
    width: 100%;
}
.hero_img_desktop {
    display: none;
}

/********** HERO CONTENT ***********/
.hero_content_container{
    border: 1px solid red;
    font-family: 'Epilogue', sans-serif;
}
.hero_title{
    font-weight: 700;
    font-size: 36px;
    text-align: center;

    margin-top: 40px;
    margin-bottom: 20px;
}

.hero_content_container p{
    border: 1px solid blue; 
    font-weight: 500;
    line-height: 27px;
    margin: 0px 18px;
    text-align: center;
    color: hsl(0, 0%, 41%);
}

/********** BUTTON ***********/
button {
    background-color: hsl(0, 0%, 8%);
    color:hsl(0, 0%, 98%);
    border: none;
    padding: 15px 27px;
    text-align: center;
    border-radius: 15px;
    font-family: 'Epilogue', sans-serif;
    font-size: 16px;
    font-weight: 500;

    /**center button horizontally*/
    margin: 0 auto;
    display: block;

    /*create space between button and paragraph*/
    margin-top: 20px;
    margin-bottom: 40px;
}



/********* Partnership Section **********/
.partnership_icons_container{
    border: 1px solid green;
    display: flex;
    justify-content: space-around;
    padding: 10px 0px;
    margin-bottom: 100px;
}
.partnership_icons_container img{
    font-size: 20px;
    align-self: center;

    /*make svg file responsive*/
    width: 15%;
    height: 15%;
}

/*********** Overlay **************/
.background_color_overlay{
    position: absolute;
    top: 0;
    width: 100%;
    height: 100vh;
    background-color: rgba(20, 20, 20, 0.7);
    display: none;
}


/******** SLIDE-OUT MENU *************/
nav {
    position: absolute;
    right: 0;
    top: 0;
    z-index: 1;
    width: 66%;
    height: 100vh;
    background-color: white;
    display: none;  /*** hide nav ****/
}
.close_menu_icon{
    float: right;
    margin-top: 25px;
    margin-right: 20px;
}

nav ul {
    list-style-type: none;
    padding-left: 0px;
    margin-top: 85px;
}
nav ul li{  /*Main nav list*/
    padding: 23px 30px 0px 30px;
    font-size: 16px;
}

nav ul li a{
    text-decoration: none;
    color: hsl(0, 0%, 41%);
    font-weight: 500;
}
.down_arrow_icon{
    padding-left: 10px;
}

.login_or_register_container{
   /* border: 1px solid red;*/
    margin-top: 42px; 
}
.login_link{
    /*border: 1px solid green; */
    display: block;
    text-align: center;
    text-decoration: none;
    color: hsl(0, 0%, 41%);
    font-weight: 500;
    font-size: 15px;
}
.register_btn{
    background-color: white;
    color:  hsl(0, 0%, 41%);
    border: 1.5px solid  hsl(0, 0%, 41%);;
    padding: 14px 30%; /*make padding responsive to screen width*/
    font-size: 15px;
}

/******** DROP-DOWN MENU **********/
.dropdown_content, 
.dropdown_content_2 { /*All dropdown content*/
    display: flex;
    flex-direction: column;
    margin-top: 15px;
}

.dropdown1{ /*first dropdown to remove padding*/
    padding-top: 0px;
}

.dropdown_content li, 
.dropdown_content_2 li{ /*align items vertically*/
    display: flex;
    padding: 10px 30px;
}

.dropdown_item{
    padding-top: 5px;
    padding-left: 15px;
    align-items: center;
    font-size: 16px;
}

.dropdown_img{
    width: 19px;
}



/*********************** DESKTOP VERSION **********************/
@media screen and (min-width: 1030px){


    header.main_header_container{
        display: flex;
        justify-content: space-between;
        padding: 26px 40px;

        /*Allowed me to make the dropdown menu item visible */
        position: relative;
        z-index: 1;
        overflow: visible;
    }

    .menu_icon{
        display: none;
    }
    .brand_logo{
        margin-top: 4px;
    }

    nav {
        display: flex;
        justify-content: space-between;
        position: relative;
        right: auto;
        top: auto;
        z-index: 0;
        width: 90%;
        height: 27px;
        background-color:  hsl(0, 0%, 98%);
    }
    .close_menu_icon{
        display: none;
    }
    nav ul {
        list-style-type: none;
        margin: 0px;
        display: flex;
        overflow: visible;
    }
    nav ul li.main_menu{  /*Main nav list*/
        padding: 0px 25px;
        font-size: 16px;
        align-self: center; 
    }
    .dropdown1{ /*first dropdown to remove padding*/
        padding-top: 0px;
    }
    .login_or_register_container{
        display: flex;
        margin: 0;
        padding: 10px 0px; 
        width: fit-content;
     }
     .login_link{
        align-self: center;
        margin-right: 55px;
     }
     .register_btn{
        margin: 0px;
        padding: 14px 20px;
        align-self: center;
     }



     /***** Dropdown menu item **********/
    .dropdown_content, .dropdown_content_2 {
       /*border: 1px solid orange; */
       position: absolute;
       z-index: 2;
       background-color: hsl(0, 0%, 98%);
       border-radius: 13px;
       padding: 10px 16px;
       box-shadow: 1px 3px 17px 2px rgba(0,0,0,0.2);
       display: none; /*hidden the two dropdown menus*/
    }
    .dropdown_content li, 
    .dropdown_content_2 li{
       left: -44px;
       padding: 10px 10px;
    }
    .dropdown_content{
        left: -46px;
    }

    /************ HERO CONTAINER ************/
    .hero_container{
        display: flex;
        justify-content: space-between;
        height: 750px;
        width: 87%;
        margin: 0 auto;
    }
    .hero_img_container{
        order: 1;
        flex-grow: 1;
        width: 50%;
        margin-left: 20px;
    }
    .hero_content_container{
        order: 0;
        flex-grow: 1;
        width: 50%;
        margin-right: 20px;
    }

    /******* HERO IMAGE ********/
    .hero_img{
        display: none;
    }
    .hero_img_desktop {
        display: inline;
        object-fit: fill;
        object-position: center;
        height: 100%;
        width: 100%;
    }

    /******* HERO CONTENT CONTAINER **********/
    .hero_title{
        text-align: left;
        font-size: 66px;
        border: 1px solid purple;
        margin-top: 117px;
    }

    /****** created line-break ****/
    #line_break::after{
        content: "\a";
        white-space: pre;
    }
   
    .hero_content_container p{
        text-align: left;
        margin: 0px;
        width: 430px;
        font-size: 18px;
    }

}

